--- a/requirements.txt
+++ b/requirements.txt
@@ -1,196 +1,199 @@
-absl-py @ file:///opt/conda/conda-bld/absl-py_1639803114343/work
-aiohttp @ file:///C:/ci/aiohttp_1646806572557/work
-aiosignal @ file:///tmp/build/80754af9/aiosignal_1637843061372/work
-argon2-cffi @ file:///opt/conda/conda-bld/argon2-cffi_1645000214183/work
-argon2-cffi-bindings @ file:///C:/ci/argon2-cffi-bindings_1644551690056/work
-asgiref @ file:///tmp/build/80754af9/asgiref_1625643473416/work
+absl-py==0.15.0
+aiohttp==3.8.1
+aiosignal==1.2.0
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asgiref==3.4.1
 astor==0.8.1
-asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
+asttokens==2.0.5
 astunparse==1.6.3
-async-timeout @ file:///tmp/build/80754af9/async-timeout_1637851218186/work
-attrs @ file:///opt/conda/conda-bld/attrs_1642510447205/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-beautifulsoup4 @ file:///tmp/build/80754af9/beautifulsoup4_1631874778482/work
-bleach @ file:///opt/conda/conda-bld/bleach_1641577558959/work
+async-timeout==4.0.1
+attrs==21.4.0
+backcall==0.2.0
+beautifulsoup4==4.10.0
+bleach==4.1.0
 blinker==1.4
-Bottleneck @ file:///C:/ci/bottleneck_1607557040328/work
+Bottleneck==1.3.2
 bpemb==0.3.3
 brotlipy==0.7.0
-cachetools @ file:///tmp/build/80754af9/cachetools_1619597386817/work
+cachetools==4.2.2
 certifi==2021.10.8
-cffi @ file:///C:/ci_310/cffi_1642682485096/work
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
+cffi==1.15.0
+charset-normalizer==2.0.4
 chart-studio==1.1.0
-click @ file:///C:/ci/click_1646038595831/work
-colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
+click==8.0.4
+colorama==0.4.4
 colorlover==0.3.0
 conllu==4.4.1
-cryptography @ file:///C:/ci/cryptography_1633520531101/work
+cryptography==3.4.8
 cufflinks==0.17.3
 cvxopt==1.2.7
-cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
+cycler==0.11.0
 Cython==0.29.23
-debugpy @ file:///C:/ci/debugpy_1637091961445/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
+debugpy==1.5.1
+decorator==5.1.1
+defusedxml==0.7.1
 Deprecated==1.2.13
-Django @ file:///tmp/build/80754af9/django_1625585912945/work
-django-debug-toolbar @ file:///home/conda/feedstock_root/build_artifacts/django-debug-toolbar_1639676359314/work
+Django==3.2.5
+django-debug-toolbar==3.2.4
 entrypoints==0.3
-executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
+executing==0.8.3
 filelock==3.6.0
 flair==0.10
-flatbuffers @ file:///tmp/build/80754af9/python-flatbuffers_1614345733764/work
+flatbuffers==20210226132247
 fonttools==4.25.0
-frozenlist @ file:///C:/ci/frozenlist_1637767271796/work
+frozenlist==1.2.0
 ftfy==6.1.1
-gast @ file:///Users/ktietz/demo/mc3/conda-bld/gast_1628588903283/work
+gast==0.4.0
 gdown==3.12.2
 gensim==4.1.2
-google-auth @ file:///opt/conda/conda-bld/google-auth_1646735974934/work
+google-auth==2.6.0
 google-auth-oauthlib==0.4.1
-google-pasta @ file:///Users/ktietz/demo/mc3/conda-bld/google-pasta_1630577991354/work
-graphviz @ file:///tmp/build/80754af9/python-graphviz_1612303637553/work
-grpcio @ file:///C:/ci/grpcio_1637590978642/work
-h5py @ file:///C:/ci/h5py_1637120894255/work
+google-pasta==0.2.0
+graphviz==0.16
+grpcio==1.42.0
+h5py==3.6.0
 huggingface-hub==0.4.0
-idna @ file:///tmp/build/80754af9/idna_1637925883363/work
-importlib-metadata @ file:///C:/ci/importlib-metadata_1638543082309/work
+idna==3.3
+importlib-metadata==4.8.2
 inflection==0.5.1
-ipykernel @ file:///C:/ci/ipykernel_1646982785443/work/dist/ipykernel-6.9.1-py3-none-any.whl
-ipython @ file:///C:/ci/ipython_1646930408405/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1634143127070/work
+ipykernel==6.9.1
+ipython==8.1.1
+ipython-genutils==0.2.0
+ipywidgets==7.6.5
 Janome==0.4.2
-jedi @ file:///C:/ci/jedi_1644315428289/work
-Jinja2 @ file:///opt/conda/conda-bld/jinja2_1647436528585/work
-joblib @ file:///tmp/build/80754af9/joblib_1635411271373/work
-jsonschema @ file:///Users/ktietz/demo/mc3/conda-bld/jsonschema_1630511932244/work
-jupyter @ file:///C:/ci/jupyter_1607685287094/work
-jupyter-client @ file:///opt/conda/conda-bld/jupyter_client_1643638337975/work
-jupyter-console @ file:///opt/conda/conda-bld/jupyter_console_1647002188872/work
-jupyter-core @ file:///C:/ci/jupyter_core_1646994619043/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab-widgets @ file:///tmp/build/80754af9/jupyterlab_widgets_1609884341231/work
-kaleido @ file:///home/conda/feedstock_root/build_artifacts/python-kaleido_1615204619408/work
-Keras-Preprocessing @ file:///tmp/build/80754af9/keras-preprocessing_1612283640596/work
-kiwisolver @ file:///C:/ci/kiwisolver_1644962577370/work
+jedi==0.18.1
+Jinja2==3.0.3
+joblib==1.1.0
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==7.1.2
+jupyter-console==6.4.3
+jupyter-core==4.9.2
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+kaleido==0.2.1
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.2
 konoha==4.6.5
 langdetect==1.0.9
-lxml @ file:///C:/ci/lxml_1646642862366/work
-Markdown @ file:///C:/ci/markdown_1614364082838/work
-MarkupSafe @ file:///C:/ci/markupsafe_1621528502553/work
-matplotlib @ file:///C:/ci/matplotlib-suite_1647423638658/work
-matplotlib-inline @ file:///tmp/build/80754af9/matplotlib-inline_1628242447089/work
-mistune @ file:///C:/ci/mistune_1607359457024/work
+lxml==4.8.0
+Markdown==3.3.4
+MarkupSafe==2.0.1
+matplotlib==3.5.1
+matplotlib-inline==0.1.2
+mistune==0.8.4
 mkl-fft==1.3.1
-mkl-random @ file:///C:/ci/mkl_random_1626186184308/work
+mkl-random==1.2.2
 mkl-service==2.4.0
-more-itertools @ file:///tmp/build/80754af9/more-itertools_1637733554872/work
+more-itertools==8.12.0
 mpld3==0.3
-multidict @ file:///C:/ci/multidict_1607349747897/work
+multidict==5.1.0
 munkres==1.1.4
-nbclient @ file:///tmp/build/80754af9/nbclient_1645431659072/work
-nbconvert @ file:///C:/ci/nbconvert_1624479160025/work
-nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
+nbclient==0.5.11
+nbconvert==6.1.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
 nltk==3.6.5
-notebook @ file:///C:/ci/notebook_1637161941035/work
-numexpr @ file:///C:/ci/numexpr_1640704337920/work
-numpy @ file:///C:/ci_310/numpy_and_numpy_base_1643798589088/work
-oauthlib @ file:///opt/conda/conda-bld/oauthlib_1644332107998/work
-opt-einsum @ file:///tmp/build/80754af9/opt_einsum_1621500238896/work
+notebook==6.4.6
+numexpr==2.8.1
+numpy==1.21.5
+oauthlib==3.2.0
+opt-einsum==3.3.0
 overrides==3.1.0
-packaging @ file:///tmp/build/80754af9/packaging_1637314298585/work
-pandas @ file:///C:/ci/pandas_1641443174429/work
-pandas-datareader @ file:///tmp/build/80754af9/pandas-datareader_1626259591421/work
+packaging==21.3
+pandas==1.3.5
+pandas-datareader==0.10.0
 pandas-ta==0.3.14b0
-pandocfilters @ file:///opt/conda/conda-bld/pandocfilters_1643405455980/work
-parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+pandocfilters==1.5.0
+parso==0.8.3
+pickleshare==0.7.5
 Pillow==9.0.1
-plotly @ file:///opt/conda/conda-bld/plotly_1646671701182/work
-prometheus-client @ file:///opt/conda/conda-bld/prometheus_client_1643788673601/work
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1633440160888/work
+pip==21.2.4
+plotly==5.6.0
+prometheus-client==0.13.1
+prompt-toolkit==3.0.20
 protobuf==3.17.2
-psycopg2 @ file:///C:/ci/psycopg2_1612298766762/work
-pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
-py @ file:///opt/conda/conda-bld/py_1644396412707/work
-pyasn1 @ file:///Users/ktietz/demo/mc3/conda-bld/pyasn1_1629708007385/work
+psycopg2==2.8.6
+pure-eval==0.2.2
+py==1.11.0
+pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-pydot @ file:///C:/ci/pydot_1615395399420/work
-pydotplus @ file:///tmp/build/80754af9/pydotplus_1594390100614/work
-Pygments @ file:///opt/conda/conda-bld/pygments_1644249106324/work
-PyJWT @ file:///C:/ci/pyjwt_1619682721924/work
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1635333100036/work
-pyparsing @ file:///tmp/build/80754af9/pyparsing_1635766073266/work
+pycparser==2.21
+pydot==1.4.1
+pydotplus==2.0.2
+Pygments==2.11.2
+PyJWT==2.1.0
+pyOpenSSL==21.0.0
+pyparsing==3.0.4
 PyQt5==5.12.3
 PyQt5_sip==4.19.18
 PyQtChart==5.12
 PyQtWebEngine==5.12.1
 pyreadline==2.1
 pyreadr==0.4.4
-pyrsistent @ file:///C:/ci/pyrsistent_1636093225342/work
-PySocks @ file:///C:/ci/pysocks_1605307512533/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
+pyrsistent==0.18.0
+PySocks==1.7.1
+python-dateutil==2.8.2
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
 pywin32==302
-pywinpty @ file:///C:/ci_310/pywinpty_1644230983541/work/target/wheels/pywinpty-2.0.2-cp39-none-win_amd64.whl
+pywinpty==2.0.2
 PyYAML==6.0
-pyzmq @ file:///C:/ci/pyzmq_1638435148211/work
-qtconsole @ file:///opt/conda/conda-bld/qtconsole_1643819126524/work
-QtPy @ file:///opt/conda/conda-bld/qtpy_1643087291789/work
-Quandl @ file:///C:/ci/quandl_1614799259130/work
-regex @ file:///C:/ci/regex_1628063427816/work
-requests @ file:///opt/conda/conda-bld/requests_1641824580448/work
+pyzmq==22.3.0
+qtconsole==5.2.2
+QtPy==1.11.2
+Quandl==3.6.1
+regex==2021.8.3
+requests==2.27.1
 requests-oauthlib==1.3.0
-retrying @ file:///Users/ktietz/demo/mc3/conda-bld/retrying_1629465456590/work
+retrying==1.3.3
 rpy2==3.4.5
-rsa @ file:///tmp/build/80754af9/rsa_1614366226499/work
+rsa==4.7.2
 sacremoses==0.0.47
-scikit-learn @ file:///C:/ci/scikit-learn_1641891146221/work
-scipy @ file:///C:/ci/scipy_1641555170412/work
-seaborn @ file:///tmp/build/80754af9/seaborn_1629307859561/work
+scikit-learn==1.0.2
+scipy==1.7.3
+seaborn==0.11.2
 segtok==1.5.11
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1632406701022/work
+Send2Trash==1.8.0
 sentencepiece==0.1.95
-six @ file:///tmp/build/80754af9/six_1644875935023/work
+setuptools==58.0.4
+six==1.16.0
 smart-open==5.2.1
-soupsieve @ file:///tmp/build/80754af9/soupsieve_1636706018808/work
+soupsieve==2.3.1
 sqlitedict==2.0.0
-sqlparse @ file:///tmp/build/80754af9/sqlparse_1602184451250/work
-stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
-TA-Lib @ file:///C:/Users/User/TA_Lib-0.4.24-cp39-cp39-win_amd64.whl
+sqlparse==0.4.1
+stack-data==0.2.0
+TA-Lib==0.4.24
 tabulate==0.8.9
-tenacity @ file:///C:/ci/tenacity_1626248381338/work
-tensorboard @ file:///tmp/build/80754af9/tensorboard_1633093581375/work/tensorboard-2.6.0-py3-none-any.whl
-tensorboard-data-server @ file:///C:/ci/tensorboard-data-server_1633035225228/work/tensorboard_data_server-0.6.0-py3-none-any.whl
+tenacity==8.0.1
+tensorboard==2.6.0
+tensorboard-data-server==0.6.0
 tensorboard-plugin-wit==1.6.0
 tensorflow==2.6.0
-tensorflow-estimator @ file:///home/builder/adipietro/tf/tensorflow-estimator_1630508970172/work/tensorflow_estimator-2.6.0-py2.py3-none-any.whl
+tensorflow-estimator==2.6.0
 termcolor==1.1.0
-terminado @ file:///C:/ci/terminado_1644322780199/work
-testpath @ file:///tmp/build/80754af9/testpath_1624638946665/work
-threadpoolctl @ file:///Users/ktietz/demo/mc3/conda-bld/threadpoolctl_1629802263681/work
+terminado==0.13.1
+testpath==0.5.0
+threadpoolctl==2.2.0
 tokenizers==0.11.6
 torch==1.10.2
-tornado @ file:///C:/ci/tornado_1606924294691/work
-tqdm @ file:///opt/conda/conda-bld/tqdm_1647339053476/work
-traitlets @ file:///tmp/build/80754af9/traitlets_1636710298902/work
+tornado==6.1
+tqdm==4.63.0
+traitlets==5.1.1
 transformers==4.17.0
-typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1631814937681/work
+typing-extensions==3.10.0.2
 tzdata==2022.1
 tzlocal==4.1
-urllib3 @ file:///opt/conda/conda-bld/urllib3_1643638302206/work
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
+urllib3==1.26.8
+wcwidth==0.2.5
 webencodings==0.5.1
-Werkzeug @ file:///opt/conda/conda-bld/werkzeug_1645628268370/work
-widgetsnbextension @ file:///C:/ci/widgetsnbextension_1644991377168/work
+Werkzeug==2.0.3
+wheel==0.35.1
+widgetsnbextension==3.5.2
 Wikipedia-API==0.5.4
-win-inet-pton @ file:///C:/ci/win_inet_pton_1605306162074/work
+win-inet-pton==1.1.0
 wincertstore==0.2
-wrapt @ file:///C:/ci/wrapt_1638434068867/work
-yarl @ file:///C:/ci/yarl_1606940155993/work
-zipp @ file:///opt/conda/conda-bld/zipp_1641824620731/work
+wrapt==1.13.3
+yarl==1.6.3
+zipp==3.7.0
