--- a/.gitignore
+++ b/.gitignore
@@ -165,5 +165,5 @@ cython_debug/
 .idea/
 
 # End of https://www.toptal.com/developers/gitignore/api/django
-model.h5
-generatedPortfolios.png
+*.h5
+*.png
